[package]
name = "nesp32"
version = "0.1.0"
authors = ["Lukas Boelling <lukasboelling002@gmail.com>"]
edition = "2021"
license = "MIT"

[dependencies]
hal = { package = "esp32-hal", version = "0.16.0" }
esp-backtrace = { version = "0.9.0", features = ["esp32", "panic-handler", "exception-handler", "print-uart"] }
esp-println = { version = "0.7.0", features = ["esp32"] }
