[package]
name = "desktop"
version = "0.1.0"
authors = ["Lukas Boelling <lukasboelling002@gmail.com>"]
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0.75"
nes-lib = { path = "../nes-lib", features = ["debug"] }
parking_lot = { version = "0.12.1", features = ["arc_lock"] }
pixels = "0.13.0"
winit = { version = "0.29", features = ["rwh_05"] }
winit_input_helper = "0.15"
