[package]
name = "nes-lib"
version = "0.1.0"
authors = ["Lukas Boelling <lukasboelling002@gmail.com>"]
edition = "2021"
license = "MIT"

[lib]
name = "nes_lib"
path = "src/lib.rs"

[dev-dependencies]
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0"
pretty_assertions = "1.4.0"
seq-macro = "0.3.5"
